--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "ethers": "^6.15.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "body-parser": "^2.2.0"
+    "body-parser": "^2.2.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
